--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://asoy.github.com
+url: http://asoy.github.com/heroku
 title: My Octopress Blog
 subtitle: A blogging framework for hackers.
 author: Your Name
